<resources>
    <string name="app_name">Fasdes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="design">Design</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="sign_up">Sign up</string>
    <string name="contact_delails">Contact Details</string>
    <string name="complete_info">Complete info</string>
    <string name="next">Next</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="unfollowing">Unfollowing</string>
    <string name="followed">Followed</string>
    <string name="unfollow">unfollow</string>
    <string name="unfollowed">Unfollowed</string>
    <string name="username">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login_message">Email and password are incorrect!</string>
    <string name="unfollowing_message">hasn\'t followed any interest categories yet!</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="street_number">Street Number</string>
    <string name="street">Street</string>
    <string name="pincode">Pin code</string>
    <string name="required">Required</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="password_not_match">Password does not match</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="welcome">Welcome</string>
    <string name="login_or_signup">Log In or Sign up</string>
    <string name="retry">Retry</string>
    <string name="no_network_msg">Maybe something wrong about your internet! Please Check your network!</string>
</resources>
