<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/sign_up"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@null"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_large" />

    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/padding_size_default"
        android:text="@string/login_message"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/margin_size_default"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/margin_size_default">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/padding_size_default"
            android:paddingBottom="@dimen/padding_size_default"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="@dimen/margin_size_default">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding_size_default"
            android:paddingBottom="@dimen/padding_size_default"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_size_medium"
            android:background="@color/colorAccent"
            android:padding="@dimen/padding_size_large"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:padding="@dimen/padding_size_default"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />


</LinearLayout>
