<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_size_larger"
        android:paddingRight="@dimen/padding_size_larger">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/margin_size_default">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/padding_size_default"
                android:paddingBottom="@dimen/padding_size_default"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/margin_size_default">

            <EditText
                android:id="@+id/password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/padding_size_default"
                android:paddingBottom="@dimen/padding_size_default"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/margin_size_default">

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="text"
                android:paddingLeft="@dimen/padding_size_default"
                android:paddingBottom="@dimen/padding_size_default"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/margin_size_default">

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="text"
                android:paddingLeft="@dimen/padding_size_default"
                android:paddingBottom="@dimen/padding_size_default"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <!-- Button Sign up -->
        <Button
            android:id="@+id/sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#ea4c88"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
